@@ -1,3 +1,10 @@
+2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c:
+	(xkb_layouts_prepare_selected_tree):
+	Fix warnings from sparse. Don't use deprecated signal
+	api from gtk+.
+
 2007-08-26  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties.glade: make Add label translatable,
